<?xml version="1.0"?>
<package format="2">
  <name>tetra_calibrator</name>
  <version>0.0.0</version>
  <description>The calibration package</description>
  <maintainer email="zir_huz@todo.todo">zir_huz</maintainer>
  <license>TODO</license>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>

  </export>
</package>
